Add DIV, remove unecessary code

--- a/index.html
+++ b/index.html
@@ -27,30 +27,38 @@
     </nav>
   </header>
 
-  <section id="home" class="foggy-gray">
-    <h1>Benjamin Wiki</h1>
-    <p>What's up my name is Ben! I live in Auckland and am attending Dev Academy to learn how to programme and create my own apps!</p>
-  </section>
+  <div>
+    <section id="home" class="foggy-gray">
+      <h1>Benjamin Wiki</h1>
+      <p>What's up my name is Ben! I live in Auckland and am attending Dev Academy to learn how to programme and create my own apps!</p>
+    </section>
+  </div>
 
-  <section id="tech" class="livid-brown">
-    <h1>tech</h1>
-    <a href="./blog/css-concepts.html" class="slide-button1">What are the differences between relative, absolute, and fixed positioning?</a>
-    <a href="./blog/te-houtaewa-template.html" class="slide-button1">Te Houtaewa</a>
-  </section>
+  <div>
+    <section id="tech" class="livid-brown">
+      <h1>tech</h1>
+      <a href="./blog/css-concepts.html" class="slide-button1">What are the differences between relative, absolute, and fixed positioning?</a>
+      <a href="./blog/te-houtaewa-template.html" class="slide-button1">Te Houtaewa</a>
+    </section>
+  </div>
 
-  <section id="core" class="medium-carmine">
-    <h1>core</h1>
-    <a href="#" class="slide-button2">Learning Plan</a>
-    <a href="#" class="slide-button2">Identity, Values and Strengths</a>
-  </section>
+  <div>
+    <section id="core" class="medium-carmine">
+      <h1>core</h1>
+      <a href="#" class="slide-button2">Learning Plan</a>
+      <a href="#" class="slide-button2">Identity, Values and Strengths</a>
+    </section>
+  </div>
 
-  <section id="github" class="chestnut-rose">
-    <h1>GitHub</h1>
-    
-    <p>Check out my latest coding projects and contributions on GitHub!</p>
+  <div>
+    <section id="github" class="chestnut-rose">
+      <h1>GitHub</h1>
+      
+      <p>Check out my latest coding projects and contributions on GitHub!</p>
       <a href="https://github.com/benjamin-wiki" class="slide-button3"><img src="images/github-mark/github-mark-white.png" alt="GitHub_Logo_White" id="git-logo"> benjamin-wiki</a>
-  </section>
-
+    </section>
+  </div>
+  
   <script>
     // Get all the links in the header
     const navLinks = document.querySelectorAll('header nav a');
