--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
   <div>
     <section id="core" class="medium-carmine">
       <h1>core</h1>
-      <a href="#" class="slide-button2">Learning Plan</a>
-      <a href="#" class="slide-button2">Identity, Values and Strengths</a>
+      <a href="./blog/learning-plan.html" class="slide-button2">Learning Plan</a>
+      <a href="./blog/identity-values.html" class="slide-button2">Identity, Values and Strengths</a>
     </section>
   </div>
 
