--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       <h1>core</h1>
       <a href="./blog/learning-plan.html" class="slide-button2">Learning Plan</a>
       <a href="./blog/identity-values.html" class="slide-button2">Identity, Values and Strengths</a>
+      <a href="./blog/emotional-intelligence.html" class="slide-button2">Emotional Intelligence</a>
     </section>
   </div>
 
