Add JS-Fundamentals Blog

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <div>
     <section id="tech" class="livid-brown">
       <h1>tech</h1>
+      <a href="./blog/js-fundamentals.html" class="slide-button1">JS Fundamentals</a>
       <a href="./blog/css-concepts.html" class="slide-button1">What are the differences between relative, absolute, and fixed positioning?</a>
       <a href="./blog/te-houtaewa-template.html" class="slide-button1">Te Houtaewa</a>
     </section>
@@ -45,9 +46,9 @@
   <div>
     <section id="core" class="medium-carmine">
       <h1>core</h1>
+      <a href="./blog/emotional-intelligence.html" class="slide-button2">Emotional Intelligence</a>
       <a href="./blog/learning-plan.html" class="slide-button2">Learning Plan</a>
       <a href="./blog/identity-values.html" class="slide-button2">Identity, Values and Strengths</a>
-      <a href="./blog/emotional-intelligence.html" class="slide-button2">Emotional Intelligence</a>
     </section>
   </div>
 
