Add mindset & problem-solving blog

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <div>
     <section id="tech" class="livid-brown">
       <h1>tech</h1>
+      <a href="./blog/problem-solving.html" class="slide-button1">Problem Solving</a>
       <a href="./blog/js-fundamentals.html" class="slide-button1">JS Fundamentals</a>
       <a href="./blog/css-concepts.html" class="slide-button1">What are the differences between relative, absolute, and fixed positioning?</a>
       <a href="./blog/te-houtaewa-template.html" class="slide-button1">Te Houtaewa</a>
@@ -46,6 +47,7 @@
   <div>
     <section id="core" class="medium-carmine">
       <h1>core</h1>
+      <a href="./blog/neuroplasticity.html" class="slide-button2">Neuroplasticity</a>
       <a href="./blog/emotional-intelligence.html" class="slide-button2">Emotional Intelligence</a>
       <a href="./blog/learning-plan.html" class="slide-button2">Learning Plan</a>
       <a href="./blog/identity-values.html" class="slide-button2">Identity, Values and Strengths</a>
