--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
   <div>
     <section id="core" class="medium-carmine">
       <h1>core</h1>
+      <a href="./blog/foundations-reflections.html" class="slide-button2">Foundation Reflections</a>
       <a href="./blog/neuroplasticity.html" class="slide-button2">Neuroplasticity</a>
       <a href="./blog/emotional-intelligence.html" class="slide-button2">Emotional Intelligence</a>
       <a href="./blog/learning-plan.html" class="slide-button2">Learning Plan</a>
